test with minimal settings

--- a/.github/workflows/test_debian_packages_on_ubuntu.yml
+++ b/.github/workflows/test_debian_packages_on_ubuntu.yml
@@ -63,6 +63,9 @@ jobs:
       matrix:
         os: [ubuntu-22.04]
 
+    permissions:
+      contents: read
+
     env:
       PGPASSWORD: postgres # No password prompt
 
