remove codeql permissions

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,12 +13,7 @@ jobs:
   analyze:
     name: Analyze (${{ matrix.language }})
     runs-on: ["ubuntu-latest"]
-    permissions:
-      # required for all workflows
-      security-events: write
-
-      # required to fetch internal or private CodeQL packs
-      packages: read
+    permissions: {}
     strategy:
       fail-fast: false
       matrix:
