--- a/.github/workflows/containerized_boefjes.yml
+++ b/.github/workflows/containerized_boefjes.yml
@@ -21,6 +21,8 @@ on:
 
 jobs:
   build_containerized_boefjes:
+    permissions: 
+      contents: read
     strategy:
       matrix:
         include:
