--- a/.github/workflows/rocky_container_image.yml
+++ b/.github/workflows/rocky_container_image.yml
@@ -19,6 +19,8 @@ on:
 
 jobs:
   create_container_image:
+    permissions: 
+      contents: read
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
