--- a/.github/workflows/rocky_makelang.yml
+++ b/.github/workflows/rocky_makelang.yml
@@ -17,6 +17,8 @@ on:
 
 jobs:
   makelang:
+    permissions:
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
