--- a/.github/workflows/rocky_tests.yml
+++ b/.github/workflows/rocky_tests.yml
@@ -19,7 +19,8 @@ on:
 
 jobs:
   test:
-    permissions: {}
+    permissions: 
+      contents: read
     strategy:
       fail-fast: false
       matrix:
