--- a/.github/workflows/test_debian_packages_on_ubuntu.yml
+++ b/.github/workflows/test_debian_packages_on_ubuntu.yml
@@ -15,7 +15,8 @@ on:
 
 jobs:
   build-packages:
-    permissions: {}
+    permissions: 
+      contents: read
     strategy:
       matrix:
         dist: [ubuntu]
@@ -57,7 +58,8 @@ jobs:
           path: ${{ matrix.package }}/build/kat-${{ matrix.package }}_${{ env.RELEASE_VERSION }}_amd64.deb
 
   test-deb-install:
-    permissions: {}
+    permissions: 
+      contents: read
     needs: build-packages
     runs-on: ${{ matrix.os }}
 
