Fix container building

--- a/.github/workflows/containerized_boefjes.yml
+++ b/.github/workflows/containerized_boefjes.yml
@@ -23,6 +23,7 @@ jobs:
   build_containerized_boefjes:
     permissions: 
       contents: read
+      packages: write
     strategy:
       matrix:
         include:
