--- a/.github/workflows/boefjes_container_image.yml
+++ b/.github/workflows/boefjes_container_image.yml
@@ -21,6 +21,7 @@ jobs:
   create_container_image:
     permissions: 
       contents: read
+      packages: write
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
