--- a/.github/workflows/mula_container_image.yml
+++ b/.github/workflows/mula_container_image.yml
@@ -19,6 +19,7 @@ jobs:
   create_container_image:
     permissions: 
       contents: read
+      packages: write
     runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
